--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@mui/x-data-grid": "^7.7.0",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "immer": "^10.1.1",
